--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,4 @@ BACKUP_HASH_2="YOUR_BACKUP_CODE_2"
 JWT_SECRET="YOUR_RANDOM_JWT_SECRET"
 
 # Deepseek API Key
-DEEPSEEK_API_KEY="YOUR_DEEPSEEK_API_KEY"
+DEEPSEEK_API_KEY="sk-1b9219fa75974eea9c0a2cfceca51280"
